# mb-clouds

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  package.sh  shaders.sh  strip.sh
res/shaders/: absDiff.frag  background.frag  backgroundHDRI.frag  blurHorizontal.frag  blurVertical.frag  clouds.frag  copy.frag  postPass.frag  postPassExport.frag  res.list  screenQuad.vert  vdbDebugAABB.frag  vdbSecondaryRaySubtract-v2.frag  vdbSecondaryRaySubtract-v3.frag  vdbSecondaryRaySubtract.frag  vdbSimpleColorAdditive.frag
res/strings/: stringVdbShaderOptions.txt
res/vdb/: README.md
shadersrc/: compile.sh
shadersrc/test/: common.glsl  shader.frag  shader.vert
src/: CMakeLists.txt  OpenVDB.h  config.h  filePaths.h  init.cpp  init.h
src/clouds/: vdbClouds.cpp  vdbClouds.h  vdbIntegrationStatus.h  vdbOfflineIntegrator.cpp  vdbOfflineIntegrator.h
src/pipeline/: FrameBuffer.cpp  FrameBuffer.h  PipeMan.cpp  PipeMan.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h
src/pipeline/assets/pip/: AdaptivePipeline.cpp  AdaptivePipeline.h  BlurPipeline.cpp  BlurPipeline.h  DefaultPipeline.cpp  DefaultPipeline.h  DiffShaderTest.cpp  DiffShaderTest.h
src/pipeline/assets/pip/final/: BackgroundExporter.cpp  BackgroundExporter.h  MultipleScatteringLinearCached.cpp  MultipleScatteringLinearCached.h  MultipleScatteringNearestCached.cpp  MultipleScatteringNearestCached.h  SingleScatteringLinearBruteForce.cpp  SingleScatteringLinearBruteForce.h  SingleScatteringLinearCached.cpp  SingleScatteringLinearCached.h  SingleScatteringNearestBruteForce.cpp  SingleScatteringNearestBruteForce.h  SingleScatteringNearestCached.cpp  SingleScatteringNearestCached.h
src/pipeline/assets/pip/tests/: AdaptivePipeline.cpp  BlurPipeline.cpp  DefaultPipeline.cpp  DiffShaderTest.cpp  EmptyPipeline.cpp  EmptyPipeline.h
src/pipeline/assets/rp/: AbsDiffPass.cpp  AbsDiffPass.h  BackgroundPass.h  BlurHorizontalPass.cpp  BlurVerticalPass.cpp  CloudPass.cpp  CloudPass.h  PersistencePass.cpp  PersistencePass.h  PostPass.cpp  PostPass.h  PostPassForBlur.cpp  PostPassForBlur.h
src/pipeline/assets/rp/final/: CloudPassMSLC.cpp  CloudPassMSLC.h  CloudPassMSNC.cpp  CloudPassMSNC.h  CloudPassSSLBF.cpp  CloudPassSSLBF.h  CloudPassSSLC.cpp  CloudPassSSLC.h  CloudPassSSNBF.cpp  CloudPassSSNBF.h  CloudPassSSNC.cpp  CloudPassSSNC.h
src/pipeline/assets/rp/tests/: BackgroundPass.cpp  BackgroundPassExport.cpp  BackgroundPassExport.h  BlurHorizontalPass.cpp  BlurHorizontalPass.h  BlurVerticalPass.cpp  BlurVerticalPass.h  CloudPass.cpp  CloudPass.h  PostPass.cpp  PostPass.h  PostPassExport.cpp  PostPassExport.h
src/shaders/: cloudStorage.cpp  cloudStorage.h  sceneData.cpp  sceneData.h  shader.cpp  shader.h  shaderUBO.cpp  shaderUBO.h  texture.cpp  texture.h
src/tree/: vdbData.h  vdbDataExtract.h  vdbTree.cpp  vdbTree.h
src/ui/: uiFunctions.cpp  uiFunctions.h
src/util/: misc.cpp  misc.h  staticStorage.h
src/util/file/: binaryFile.cpp  binaryFile.h
src/world/: camera.cpp  camera.h
test/: CMakeLists.txt  test.cpp
test/tests/: vdbDataExtractTest.h  vdbDataTest.h  vdbProcessingTest.h
(+6 files in other folders)
